--- a/vite-react-app/src/Recipes/recipeCard.scss
+++ b/vite-react-app/src/Recipes/recipeCard.scss
@@ -46,7 +46,7 @@
     transition: background-color 0.3s ease;
 
     &:hover {
-      background-color: lighten($color: u.$neutral-900, $amount: 5%) ;
+      // background-color: lighten($color: u.$neutral-900, $amount: 5%) ;
     }
   }
 }
